--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto = none
+spring.jpa.hibernate.ddl-auto = create
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
